syntax="proto2";
import "PlayerInfo.proto";
package msg;

message Rspn_UpdateStatus {
	repeated StatusInfo Info = 1;

}
 
 